Stick Figure Nose

--- a/saratest.html
+++ b/saratest.html
@@ -14,7 +14,7 @@
 				<circle cx="170" cy="200" r="5" fill="gray" stroke="black" stroke-width="3"	 />
 				<circle cx="210" cy="200" r="5" fill="gray" stroke="black" stroke-width="3"	 />
 
-        <line x1="200" y1="200" x2="50" y2="300" stroke="black" stroke-width="3" />
+        <line x1="195" y1="200" x2="180" y2="220" stroke="black" stroke-width="3" />
 
 				
 		
@@ -25,4 +25,7 @@
 		<p>to get you started this world is the song world so when you battle stickfigure/singing boss. lets start with the first toon. aye ooh. you: aye ooh. bot: lets spice this up. aye ooh kids . lol to sing sing with me!</p>
 		<h1>health:100 coins: 0 you must face kitune10 (user) level:10 kitune10:your going down... sarachicky676lol9ok9.</h1>	
 		
+    <p>*drawing*</p>
+
 	</body>
+
